kustomize/overlays/scots-lab/apps/openspeedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  namespace: openspeedtest
spec:
  selector:
    app: openspeedtest
  ports:
    - name: proxy
      port: 4180
      targetPort: 4180
