kustomize/overlays/scots-lab/apps/openspeedtest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openspeedtest
  namespace: openspeedtest
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: OpenSpeedTest
    gethomepage.dev/group: Tools
    gethomepage.dev/description: Network Speed Test
    gethomepage.dev/icon: mdi-speedometer
    gethomepage.dev/href: https://speed.srbii.com
    gethomepage.dev/weight: '45'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - speed.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: openspeedtest
      port: 4180
